# Q-Synth

./: .gitignore  CHANGELOG.md  Developer.md  INSTALL.md  LICENSE  README.md  README_clifford.md  README_cnot.md  README_layout.md  architecture.py  circuit_extraction_global.py  circuit_extraction_lifted.py  circuit_extraction_local.py  circuit_extraction_local_initial.py  circuit_extraction_sat.py  circuit_utils.py  generate_global_pddl.py  generate_lifted.py  generate_local.py  generate_local_initial.py  generate_local_strict.py  mapped_unmapped.py  pyproject.toml  q-synth.py  qiskit_optimization.py  requirements-layout.txt  requirements.txt  run_planner.py  sat_block.py  sat_encoding.py  sat_encoding_bridges.py  sat_encoding_twoway.py  sat_utils.py  setup.cfg  symmetry_breaking.py  testing_mapped_circuit.py  testing_mapped_circuit_new.py
Domains/: global-domain-noanc.pddl  global-domain.pddl  lifted-initial-strict-bridge-noanc.pddl  lifted-initial-strict-noanc.pddl  lifted-initial-strict.pddl  lifted-relaxed-noanc.pddl  lifted-strict-noanc-exp.pddl  lifted-strict-noanc.pddl  lifted-strict.pddl
Scripts/: run_experiment1_tenerife.sh  run_experiment2_melbourne.sh  run_experiment3_noancillary.sh
Tests/: .coveragerc  clifford_synthesis_test.py  cnot_synthesis_test.py  depth_synthesis_test.py  layout_subarchitectures_test.py  layout_synthesis_test.py  layout_wrapper_test.py  test_utils.py
Tutorials/: 04q_33936_clifford.qasm  INSTALL_CLI.md  README_CLI_clifford.md  README_CLI_cnot.md  README_CLI_layout.md  barenco_tof_3.qasm  ecai24.qasm  mapped_barenco_tof_3.qasm  (+2 more)
(+963 files in other folders)
