[metadata]
name = Q-Synth
version = 5.1
author = Irfansha Shaik, Jaco van de Pol
author_email = irfansha.shaik@cs.au.dk, jaco@cs.au.dk
description = Optimal Circuit Layout Synthesis, CNOT (Re)Synthesis, and Clifford (Re)Synthesis, based on Classical Planning, SAT, and QBF Solving
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/irfansha/Q-Synth

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires = file: requirements.txt

[options.packages.find]
where = src